@@ -3,6 +3,8 @@
 
 Version 8.0.28
 
+  - Fix for Bug#84365 (33425867), INSERT..VALUE with VALUES function lead to a StringIndexOutOfBoundsException.
+
   - Fix for Bug#105211 (33468860), class java.time.LocalDate cannot be cast to class java.sql.Date.
 
   - Fix for Bug#101389 (32089018), GETWARNINGS SHOULD CHECK WARNING COUNT BEFORE SENDING SHOW.
